sfa_dash/static/css/styles.css
/* Bootstrap overrides */
table.table th{
	border-top: unset;
}

/* General css */

/* Always display scrollbar to stop jumping*/
html{
	overflow-y: scroll;
}
*{
	margin: 0;
	padding: 0;
}
body{
 	color: #333;
}
main{
	margin-top: 7rem;
	margin-bottom: 2rem;
}
.menu-list{
  list-style: none;
}
.menu-list li{

}
.logo-wrap{
	width: 200px;
}
.logo-wrap h1{
	font-size: 1.8rem;
	text-transform: uppercase;
	line-height: .85;
}
.logo-wrap a{
	color: #555;
}
.logo-wrap a:hover{
	text-decoration: unset;
	color: #111;
}
@media (min-width: 769px) {
	div.teamlogo-wrapper {
        max-width: 30%;
    }
}
@media (max-width: 768px) {
	div.teamlogo-wrapper {
		max-width: 45%;
    }
}
img.teamlogo {
    max-height: 150px;
	max-width: 100%;
	display: inline-block;
	vertical-align: middle;
}
div.teamlogo-wrapper{
	max-height: 150px;
	display: inline-block;
	margin: 1.5%;
}
.page-title{
 	margin-top: .5em;
}
.section-title{
	font-size: 1.5rem;
	font-weight: 700;
}
/* Nav */
header nav{
	box-shadow: 0 1px 3px #DDD;
}
.account-link{
 	float: right;
}

/* Secondary Nav */
.sub-nav{
}
.sub-nav-list{
	list-style: none;
	padding-inline-start: unset;
	margin-bottom: 0;
}
.sub-nav-item{
	display: inline-block;
}
.sub-nav-link{
	padding: .5em 1em .5em 0;
	display: inline-block;
	border-bottom: 2px solid transparent;
}
.sub-nav-link:hover, .sub-nav-link.active{
	text-decoration: none;
	border-bottom: 2px solid #0056b3;
}
/* Footer */
.footer{
	padding-top: 2rem;
	padding-bottom: 1rem;
	box-shadow: 0 -1px 3px #DDD;
}
.footer-link{
	display: inline-block;
	vertical-align: middle;
	float: right;
}

/* Data/Data */
.data-plot-content{
	width: inherit;
}
.data-metadata{
	padding: 1em;
}
ul.data-metadata-fields{
	list-style: none;
}
.data-metadata-label{
	font-weight: 700;
}

/* Table Search CSS */
.results tr[visible='false'],
.no-result{
  display:none;
}

.results tr[visible='true']{
  display:table-row;
}

.counter{
  padding:8px; 
  color:#ccc;
}

/* Forms */
.form-group{
  float: left;
}
.form-element label{
  font-weight: 600;
}
@media (min-width: 769px) {
  .form-element{
    width: 50%;
  }
}
@media (max-width: 768px){
  .form-element{
    width: 100%;
  }
}
.form-element{
  float: left;
  padding: .5em 1em;
  position: relative;
}
.form-element.full-width{
  width: 100%;
}
.time-field{
  width: unset;
  display: inline-block;
}
.form-element .well-known-text-field{
  width: 100%;
}
fieldset{
  float: left;
  background-color: #f8f9fa;
  box-shadow: 0 1px 3px #DDD;
  margin: 1em 0;
  padding: 1em 0; 
}
pre.example-text{
  background-color: #f8f9fa;
  border: 1px solid #f0f0f0;
  border-radius: 5px;
  padding: 1em;
}
span.help-text{
  width: 100%;
  padding: .5em;
  border: 2px solid #6c757d;
  border-radius: 8px;
  position: absolute;
  background-color: white;
  box-shadow: 1px 1px 1px;
  z-index: 1;
  left: 0;
  top: 100%;
}
/* Tooltip arrow */
span.help-text::before {
  content: "";
  position: absolute;
  top: -11px;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #6c757d transparent;
}
ul.error-list{
  list-style: none;
}
li.alert{
  margin-bottom: .5rem;
}
li.alert p{
  margin-bottom: 0;
}
pre.example-text{
    overflow: scroll;
    max-width: 761px;
}
a.help-button{
    color: white;
    font-weight: bolder;
    background-color: #6c757d;
    border-radius: 12px;
    width: 24px;
    display: inline-block;
    text-align: center;
}
.form-control{
    display: inline-block;
}
.input-wrapper{
    width: calc(100% - 29px);
    display: inline-block;
}

